--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -11,7 +12,9 @@
     "codemirror": "^5.53.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
+    "js-yaml": "^3.13.1",
     "vue": "^2.6.11",
+    "vue-codemirror": "^4.0.6",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
