--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "codemirror": "^5.53.2",
     "core-js": "^3.6.4",
+    "diff-match-patch": "^1.0.5",
     "element-ui": "^2.13.1",
     "js-yaml": "^3.13.1",
     "vue": "^2.6.11",
